<resources>
    <string name="app_name">BerUang</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Beranda</string>
    <string name="title_article">Artikel</string>
    <string name="title_management">Keuangan</string>
    <string name="bar_management">Money Management</string>
    <string name="title_profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pie_chart">PieChartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <!--    Home-->
    <string name="hello">Hello,</string>
    <string name="username">Bae Suzy</string>
    <string name="categoryhomeallocation">Pembagian Pengeluaran Saat ini</string>
    <string name="recentarticle">Artikel Terkini</string>
    <string name="seemore">Lainnya</string>

    <!--   Profile-->
    <string name="profile">Profil Saya</string>
    <string name="emailuser">baesuzy@gmail.com</string>
    <string name="account">Akun</string>
    <string name="editprofile">Edit Profile</string>
    <string name="lastseen">Terakhir Dilihat</string>
    <string name="change">Ubah</string>
    <string name="requirement">Gambar Profile Anda sebaiknya memiliki rasio 1:1 dan berukuran tidak lebih dari 10MB.</string>


    <!--   Article-->
    <string name="bookmarks">Bookmarks</string>
    <string name="accountsetting">Pengaturan Akun</string>
    <string name="logout_description">Apakah Kamu Yakin Ingin Log Out?</string>
    <string name="logout_cancel">Batal</string>
    <string name="yes">Ya</string>
    <string name="managemoney">Manage Your Money!</string>
    <string name="Ber">Ber</string>
    <string name="Uang">Uang</string>
    <string name="forYou">Untuk Kamu</string>
    <string name="temukanMinat">Temukan Minatmu</string>
    <string name="image_article">Article image</string>
    <string name="bookmark">Bookmark</string>
    <string name="tag">Tag</string>
    <string name="tagarticle">Tag:</string>
    <string name="article_content">articel content</string>
    <string name="recomendation">Rekomendasi</string>

    <!--   Management-->
    <string name="status">Status</string>
    <string name="statusdetail">Selamat! Pengeluaran Anda saat ini berada dalam batas yang aman. Tetap pertahankan pengelolaan keuangan yang baik.</string>
    <string name="allocation">Alokasi</string>
    <string name="report">Expand</string>
    <string name="date">tanggal</string>
    <string name="rupiah">Rp%d</string>
    <string name="rupiah2">Rp%f</string>
    <string name="rupiah3">Rp%s</string>
    <string name="percent">%d%</string>
    <string name="percenttext">Persen</string>
    <string name="income">Pemasukkan</string>
    <string name="salarynow">Saldo terkini</string>
    <string name="spendingnow">Jumlah pengeluaran</string>
    <string name="editallocation">edit alokasi</string>
    <string name="outcome">outcome</string>
    <string name="historyallocation">Riwayat Alokasi</string>
    <string name="detailallocation">Detail Alokasi</string>
    <string name="categoryallocation">Kategori Alokasi</string>
    <string name="nameallocation">Nama Alokasi</string>
    <string name="totalallocation">Total Alokasi Rp%s</string>
    <string name="dc_alocation">Alokasi keuangan</string>
    <string name="add">Tambah+</string>
    <string name="cd_previous">Previous</string>
    <string name="cd_next">Next</string>
    <string name="description">Deskripsi</string>
    <string name="salary">Saldo</string>
    <string name="cancel">Batal</string>
    <string name="save">Simpan</string>
    <string name="allocationexpand">Terdapat %d%  pengeluaran menggunakan dana Alokasi</string>

    <!--   Login n Regis-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="redirectRegis">Don\'t Have Account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="nameInput">Enter Your Name</string>
    <string name="redirectLogin">Already Have An Account?</string>
    <string name="valid_email">Insert Valid Email</string>
    <string name="email_cannot_empty">Email Cannot be Empty</string>
    <string name="logout">Logout</string>
    <string name="password_less">Your Password is Less than 8 Characters</string>


    <!--    Error-->
    <string name="error">404 Not Found</string>

    <string name="article_page">Article</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="but_next">Lanjut</string>
    <string name="image_welcome">Welcome</string>
    <string name="for_welcome">Kendalikan finansialmu di mana saja dengan aplikasi kami.</string>
    <string name="kata_mutiara">ini adalah manajer uang berukuran saku untukmu! Ingat ya, kita nggak bisa bantu kamu cariin kaos kaki yang hilang di mesin cuci.</string>
    <string name="text_third">Pantau keuanganmu sambil senyum-senyum dengan aplikasi kami</string>
    <string name="text_third_detail">Ingat, meskipun kami hebat, kita tetap belum punya kemampuan menemukan kunci yang hilang di bawah sofa.</string>
    <string name="text_second">Uang jajanmu, aplikasi kami.</string>
    <string name="text_second_detail">Mengatur finansial jadi gampang dan lucu! Kami hanya bisa manajemen uangmu, bukan membantu mencari kaus kaki yang hilang di bawah tempat tidur.</string>
    <string name="text_first">Kendalikan finansialmu di mana saja dengan aplikasi kami.</string>
    <string name="text_first_detail">" ini adalah manajer uang berukuran saku untukmu! Ingat ya, kita nggak bisa bantu kamu cariin kaos kaki yang hilang di mesin cuci."</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth_hint">Input your birthday</string>
    <string name="date_of_birth">Birthday</string>
    <string name="author">Author</string>
    <string name="recommend">Recomendation</string>
</resources>