<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:enabled="true"
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:enabled="true"
        android:id="@+id/navigation_management"
        android:icon="@drawable/ic_management"
        android:title="@string/title_management" />

    <item
        android:enabled="true"
        android:id="@+id/navigation_article"
        android:icon="@drawable/ic_article"
        android:title="@string/title_article" />

    <item
        android:enabled="true"
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>