<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_management">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.beruang.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.capstone.beruang.ui.article.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/navigation_management"
        android:name="com.capstone.beruang.ui.management.ManagementFragment"
        android:label="@string/title_management"
        tools:layout="@layout/fragment_management" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.beruang.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>