<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/BerUang"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="20dp"
        android:alpha="0"
        tools:alpha="100"
        android:background="@drawable/lg_beruang"
        app:layout_constraintBottom_toTopOf="@+id/tvSplashScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/tvSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/managemoney"
        android:alpha="0"
        tools:alpha="100"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/blue_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tvSplashScreen"
        app:layout_constraintStart_toStartOf="@id/tvSplashScreen"
        app:layout_constraintTop_toBottomOf="@id/tvSplashScreen"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/Ber"
            android:textColor="@color/black_200"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/Uang"
            android:textColor="@color/black_200"
            android:textSize="40sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>