<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_percent"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/square"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/white"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/percent" />

        <TextView
            android:id="@+id/tv_allocationtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/tv_percent"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/black_200"
            card_view:layout_constraintStart_toEndOf="@+id/tv_percent"
            card_view:layout_constraintTop_toTopOf="@+id/tv_percent"
            tools:text="@string/allocation" />

        <TextView
            android:id="@+id/tv_allocationstatus"
            android:layout_width="164dp"
            android:maxLines="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/tv_percent"
            android:fontFamily="@font/poppins_medium"
            android:textSize="10sp"
            android:textColor="@color/black_200"
            card_view:layout_constraintStart_toEndOf="@+id/tv_percent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_allocationtype"
            tools:text="@string/allocationexpand" />
        <TextView
            android:id="@+id/tv_rp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_toEndOf="@id/tv_percent"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black_200"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/tv_allocationtype"
            card_view:layout_constraintTop_toTopOf="@+id/tv_allocationtype"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="267dp"
            tools:text="@string/rupiah" />


        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_next"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
